SDM-2649: Post-action framework tests (#131)
* SDM-2649: Moved TestConfig under config package and fixed testclass.name property values of @SpringBootTest test classes.

* SDM-2649: Test for integration-test profile as well.

* SDM-2649: Add testMissingPostActionExecutionChain() test case.

* SDM-2649: Add ConditionalPostActionIntegrationTest, refactoring and reusing existing code.
Based on ConditionalMessagePopulatorIntegrationTest, formerly ConditionalMessagePopulatorConfigTest.
Add TestPostAction and TestPostActionRegistry.

* SDM-2649: Make post-actions configuration optional.

* SDM-2649: Add AbstractMessagePopulatorFactoryConfig and AbstractPostActionFactoryConfig to reduce duplication in (test) configurations.

* SDM-2649: Add FailingPostActionTest. Also add TestFileUtil to reuse common code.

* SDM-2649: Test PostAction invocations in AviationMessageArchiverTest.

* SDM-2649: Add message populator and post-action-related test cases in InvalidConfigDetectionTest and ValidProductionLineConfigTest.

* SDM-2649: Code cleaning.